Implement the findByTags endpoint